@@ -1492,5 +1492,27 @@ public class Test
 			
 			Assert.IsNotNull (provider.Find ("Method"), "method 'Method' not found");
 		}
+		
+		/// <summary>
+		/// Bug 487218 - No intellisense for implicit arrays
+		/// </summary>
+		[Test()]
+		public void TestBug487228 ()
+		{
+			CompletionDataList provider = CreateProvider (
+@"
+public class Test
+{
+	public void Method ()
+	{
+		var v = new Test[] { new Test () };
+		$v[0].$
+	}
+}
+");
+			Assert.IsNotNull (provider, "provider not found.");
+			
+			Assert.IsNotNull (provider.Find ("Method"), "method 'Method' not found");
+		}
 	}
 }
