@@ -1,6 +1,11 @@
 2009-03-23  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
+	  test for 'Bug 487218 - var does not work with arrays'.
+
+2009-03-23  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
 	  test for bug "Bug 487228 - No intellisense for implicit
 	  arrays"
 
